Address code dup on apply/diff